@@ -1,4 +1,18 @@
 # Boing
 Made use of JavaFX to create shapes which bounce across a screen, whilst growing and shrinking in size 
 
+
+### How to Run:
+
+I used IntelliJ to develop this program so the steps needed for other IDEs may differ:
+
+- JavaFx should be bundled into IntelliJ but if this is not the case please install [JavaFx](https://openjfx.io/openjfx-docs/).
+
+To the run configuration please add:
+
+```bash
+--module-path /path/to/javafx-sdk-15.0.1/lib --add-modules javafx.controls,javafx.fxml
+```
+This should be under the section add to VM options under edit configurations.
+
 ![](https://github.com/jumairamiller/Boing/blob/master/visuals/boing.gif)
